2002-04-26  Donal K. Fellows  <fellowsd@cs.man.ac.uk>

	* generic/tclObj.c (SetBooleanFromAny): Could not interpret
	integers that did not look like doubles as booleans [Bug 548686]

2002-04-19  Donal K. Fellows  <fellowsd@cs.man.ac.uk>

	* generic/tclCmdIL.c (InfoBodyCmd): 
	* tests/info.test (info-2.6): Proc bodies without string reps
	would report as empty [Bug #545644]

2002-04-18  Miguel Sofer  <msofer@users.sourceforge.net>

	* generic/tclNamesp.c:
	* tests/info.test:  [Bug 545325 ] info level didn't report
	namespace eval, bug report by Richard Suchenwirth.

2002-04-18  Don Porter  <dgp@users.sourceforge.net>

	* doc/msgcat.n: Added "package require"s to msgcat documentation.

2002-04-18  Miguel Sofer  <msofer@users.sourceforge.net>

	* generic/tclExecute.c:
	* tests/expr-old.test: fix for [Bug #542588] (Phil Ehrens), where
	"too large integers" were reported as "floating-point value" in
	[expr] error messages.

2002-04-11  Jeff Hobbs  <jeffh@ActiveState.com>

	* tcl.m4: Enabled COFF as well as CV style debug info with
	--enable-symbols to allow Dr. Watson users to see function info.
	More info on debugging levels can be obtained at:
	http://msdn.microsoft.com/library/en-us/dnvc60/html/gendepdebug.asp

2002-04-08  Daniel Steffen  <das@users.sourceforge.net>

	* mac/tclMacOSA.c:
	* mac/tclMacResource.c: added missing Tcl_UtfToExternalDString
	conversions of resource file names.
	* mac/tclMacSock.c (TcpGetOptionProc): fixed bug introduced
	by Andreas on 02-25; changed strcmp's to strncmp's so that
	option comparison behaves like on other platforms.
	* mac/tcltkMacBuildSupport.sea.hqx (CW Pro6 changes): added
	support to allow Tk to hookup C library stderr/stdout to TkConsole.
	* mac/tclMacTime.c (TclpGetTZName): fix for daylight savings TZName bug

2002-03-29  Jeff Hobbs  <jeffh@ActiveState.com>

	* tests/trace.test (trace-18.2):
	* generic/tclCmdMZ.c (Tcl_TraceObjCmd, TraceVarProc): corrected
	potential double-free of traces on variables by flagging in